Poprawiony projekt - domain, repository, service, inMemoryRepository